Change enter and icons

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
       <div>0</div>
       <div>-</div>
       <div>=</div>
-      <div class="backspace" data-key="Backspace"><img src="/images/icons8-стереть-символ-26.png" alt=""></div>
-      <div data-key="Escape"><img src="/images/icons8-удалить-50.png" alt=""></div>
+      <div class="backspace" data-key="Backspace"><img src="/images/icons8-стереть-символ-50.png" alt=""></div>
+      <div data-key="Escape"><img src="/images/icons8-удалить-50(1).png" alt=""></div>
     </div>
     <div class="rows">
-      <div data-key="Enter" class="enter"><img src="/images/icons8-вниз-влево-26.png" alt=""></div>  
       <div class="row">
         <div data-key="Tab" class="tab">Tab</div>
         <div>q</div>
@@ -42,6 +41,7 @@
         <div>p</div>
         <div>[</div>
         <div>]</div>
+        <div data-key="Enter" class="enter"><img src="/images/icons8-вниз-влево-50.png" alt=""></div>
         <div id="pointer"><img src="/images/icons8-вверх-влево-24.png" alt=""></div>
         <div id="pointer-dif-sides"><img src="/images/icons8-направления-в-четыре-стороны-32.png" alt=""></div>
       </div>
@@ -83,16 +83,16 @@
     </div>
 
     <div class="row">
-      <div data-key="Control" class="control">Ctl</div>
-      <div data-key="Alt" class="option">Option</div>
-      <div data-key="Meta" class="command">Command</div>
+      <div data-key="Control" class="control">ctl</div>
+      <div data-key="Alt" class="option">option</div>
+      <div data-key="Meta" class="command">command</div>
       <div data-key=" " class="space"></div>
-      <div data-code="MetaRight" class="command">Command</div>
-      <div data-code="AltRight" class="option">Option</div>
+      <div data-code="MetaRight" class="command">command</div>
+      <div data-code="AltRight" class="option">option</div>
       <div data-key="ArrowLeft" class="left"><img src="/images/icons8-стрелка-влево-в-круге-2-50.png" alt=""></div>
       <div data-key="ArrowDown" class="down"><img src="/images/icons8-стрелка-вниз-в-круге-50.png" alt=""></div>
       <div data-key="ArrowRight" class="right"><img src="/images/icons8-стрелка-вправо-в-круге-50.png" alt=""></div>
-      <div class="menu"><img src="/images/icons8-меню-26.png" alt=""></div>
+      <div class="menu"><img src="/images/icons8-меню-50.png" alt=""></div>
     </div>
   </div>
   <input id="input" type="text" value="Enter me...">
